<resources>
    <string name="app_name">企管通</string>
    <string name="activity_home">企管通</string>
    <string name="other_activity">其他界面</string>
    <string name="login_activity">登录</string>


    <string name="app_title">百度鹰眼</string>
    <string name="start_trace">开始</string>
    <string name="stop_trace">停止</string>
    <string name="select_date">日期</string>
    <string name="fence_operator">操作</string>
    <string name="is_processed">纠偏</string>
    <string name="track_distance">里程</string>
    <string name="geo_fence">地理围栏</string>
    <string name="track_upload">轨迹追踪</string>
    <string name="track_query">历史轨迹</string>
    <string name="history_track">  查询历史轨迹</string>
    <string name="realtime_track">查询实时轨迹</string>
    <string name="circular_fence">圆形围栏</string>
    <string name="vertexes_fence">多边形围栏</string>
    <string name="delete_fence">删除围栏</string>
    <string name="fence_list">围栏列表</string>
    <string name="monitored_status">监控状态</string>
    <string name="history_alarm">历史报警</string>
    <string name="delay_alarm">延迟报警</string>
    <string name="fence_name">围栏名称</string>
    <string name="fence_desc">围栏描述</string>
    <string name="set_fence">设置围栏</string>
    <string name="fence_radius">围栏半径(单位：米)</string>
    <string name="vertex_number">顶点数量</string>
    <string name="fence_precision">去噪精度(单位：米)</string>
    <string name="fence_type">围栏类型</string>
    <string name="server_fence">服务端围栏</string>
    <string name="local_fence">本地围栏</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="circular_fence_caption">请点击地图标记围栏圆心</string>
    <string name="vertexes_fence_caption">请按顺时针或逆时针方向点击地图</string>
    <string name="listData">下拉更多</string>


    <string name="ac_login_spinner_txt">请选择企业</string>
    <string name="ac_login_username_txt">用户名</string>
    <string name="ac_login_pwd_txt">密码</string>
    <string name="ac_login_forgot_pwd_txt">修改密码</string>
    <string name="ac_login_btn_login_txt">登录</string>
    <string name="ac_login_error_promit_txt">用户名或密码错误</string>
    <string name="ac_forgot_error_promit_txt">密码错误，请重新输入</string>
    <string name="ac_login_error_net_txt">网络异常，请检查您的网络</string>
    <string name="ac_forgot_account">帐号</string>
    <string name="ac_forgot_old_pwd">旧密码</string>
    <string name="ac_forgot_new_pwd">新密码</string>
    <string name="ac_forgot_new_pwd_again">确认密码</string>
    <string name="ac_forgot_confirm">确定</string>
    <string name="ac_login_fail">登录失败</string>
    <string name="ac_forgot_fail">修改密码失败</string>
    <string name="ac_again_login">修改成功，请重新登录</string>
    <string name="loading">加载中......</string>
    <string name="ac_my">我</string>
    <string name="system_set">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="exit">退出登陆</string>
    <string name="exit_msg">退出成功</string>
    <string name="err_msg">未查询到相关信息</string>

    <string name="shexiangtou"> 摄像头</string>


    <string name="activity_kaoqin">考勤</string>

    <string name="activity_apply">申请</string>

    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="title_dialog_hint">提示</string>
    <string name="cancel_select_photo_hint">用户取消了选择照片。</string>
    <string name="apply_details">申请详情</string>


    <string name="action_settings">Settings</string>
    <string name="demo_title_login">互联网观看视频---LoginDemo</string>
    <string name="demo_login_getDeviceList">适用于有平台管理的多个设备</string>
    <string name="demo_getDeviceList">设备列表</string>

    <string name="demo_title_openVideo">局域网观看视频---OpenVideoDemo</string>
    <string name="demo_openVideo">适用于局域网内单个设备</string>

    <string name="demo_title_openAlarm">打开报警---OpenAlarmDemo</string>
    <string name="demo_openAlarm">开启报警功能</string>

    <string name="demo_title_openTalk">打开对讲---OpenTalkDemo</string>
    <string name="demo_openTalk">打开对讲功能，实现远程对讲</string>

    <string name="demo_title_openListen">打开声音---OpenListenDemo</string>
    <string name="demo_openListen">打开声音功能，获取视频声音</string>

    <string name="demo_title_record">打开录像---RecordDemo</string>
    <string name="demo_record">打开本地录像，实现录像保留功能</string>
    <string name="record_time">00:00:00</string>
    <string name="start_record">开始录像</string>

    <string name="demo_title_capture">本地抓图---CaptureDemo</string>
    <string name="demo_capture">实现录像的截屏拍照功能</string>

    <string name="demo_title_lansearch">局域网搜索---LanSearchDemo</string>
    <string name="demo_lansearch">实现局域网搜索功能</string>


    <string name="she_xiang_tou_list">摄像头列表</string>
    <string name="activity_tongzhi">通知公告</string>
</resources>
