<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <!-- 登录-->
    <include layout="@layout/widget_toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ac_login_tv_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:hint="@string/ac_login_spinner_txt"
                    android:text="@string/ac_login_spinner_txt" />

                <Spinner
                    android:id="@+id/ac_login_spinner"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="50dp"
                    android:visibility="gone" />


            </RelativeLayout>

            <EditText
                android:id="@+id/ac_login_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:hint="@string/ac_login_username_txt"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ac_login_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ac_login_pwd_txt"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/ac_login_forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:text="@string/ac_login_forgot_pwd_txt" />

            <Button
                android:id="@+id/ac_login_btn_login"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ac_login_btn_login_txt" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>