<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- 修改密码-->
    <include layout="@layout/widget_toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/ac_forgot_old_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ac_forgot_old_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                 />

            <EditText
                android:id="@+id/ac_forgot_new_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ac_forgot_new_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/ac_forgot_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:hint="@string/ac_forgot_new_pwd_again"
                android:inputType="textPersonName"
                android:singleLine="true"
                 />

            <Button
                android:id="@+id/ac_forgot_btn_confirm"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ac_forgot_confirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>